--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "egg": "^2.15.1",
+    "egg-mysql": "^3.1.0",
     "egg-scripts": "^2.11.0"
   },
   "devDependencies": {
